// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp json snapshot 1`] = `
Object {
  "docs": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
  "initializer": "\`\`\`csharp
using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};
\`\`\`
",
  "name": "CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.RepositoryCatalogData",
      "name": "RepositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "object",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.RepositoryName",
      "name": "RepositoryName",
      "optional": true,
      "type": Object {
        "name": "string",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.RepositoryPolicyText",
      "name": "RepositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "object",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.Tags\`.",
      "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.Tags",
      "name": "Tags",
      "optional": true,
      "type": Object {
        "name": "%[]",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/core.CfnTag",
            "name": "Amazon.CDK.CfnTag",
          },
        ],
      },
    },
  ],
}
`;

exports[`csharp markdown snapshot 1`] = `
" CfnPublicRepositoryProps <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"[object Object].Initializer\\"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};
\`\`\`

## \`RepositoryCatalogData\`<sup>Optional</sup> <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData\\"></a>

\`\`\`csharp
public object RepositoryCatalogData { get; set; }
\`\`\`

- *Type:* \`object\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

## \`RepositoryName\`<sup>Optional</sup> <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryName\\"></a>

\`\`\`csharp
public string RepositoryName { get; set; }
\`\`\`

- *Type:* \`string\`

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

## \`RepositoryPolicyText\`<sup>Optional</sup> <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryPolicyText\\"></a>

\`\`\`csharp
public object RepositoryPolicyText { get; set; }
\`\`\`

- *Type:* \`object\`

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

## \`Tags\`<sup>Optional</sup> <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.Tags\\"></a>

\`\`\`csharp
public CfnTag[] Tags { get; set; }
\`\`\`

- *Type:* [\`Amazon.CDK.CfnTag\`](#Amazon.CDK.CfnTag)[]

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`java json snapshot 1`] = `
Object {
  "docs": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps",
  "initializer": "\`\`\`java
import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
\`\`\`
",
  "name": "CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.repositoryCatalogData",
      "name": "repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.repositoryName",
      "name": "repositoryName",
      "optional": true,
      "type": Object {
        "name": "java.lang.String",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.repositoryPolicyText",
      "name": "repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.Tags\`.",
      "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.tags",
      "name": "tags",
      "optional": true,
      "type": Object {
        "name": "java.util.List<%>",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/core.CfnTag",
            "name": "software.amazon.awscdk.core.CfnTag",
          },
        ],
      },
    },
  ],
}
`;

exports[`java markdown snapshot 1`] = `
" CfnPublicRepositoryProps <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"[object Object].Initializer\\"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
\`\`\`

## \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`java
public java.lang.Object getRepositoryCatalogData();
\`\`\`

- *Type:* \`java.lang.Object\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

## \`repositoryName\`<sup>Optional</sup> <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

\`\`\`java
public java.lang.String getRepositoryName();
\`\`\`

- *Type:* \`java.lang.String\`

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

## \`repositoryPolicyText\`<sup>Optional</sup> <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

\`\`\`java
public java.lang.Object getRepositoryPolicyText();
\`\`\`

- *Type:* \`java.lang.Object\`

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

## \`tags\`<sup>Optional</sup> <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.tags\\"></a>

\`\`\`java
public java.util.List<CfnTag> getTags();
\`\`\`

- *Type:* java.util.List<[\`software.amazon.awscdk.core.CfnTag\`](#software.amazon.awscdk.core.CfnTag)>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`python json snapshot 1`] = `
Object {
  "docs": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps",
  "initializer": "\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
\`\`\`
",
  "name": "CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.repository_catalog_data",
      "name": "repository_catalog_data",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.repository_name",
      "name": "repository_name",
      "optional": true,
      "type": Object {
        "name": "str",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.repository_policy_text",
      "name": "repository_policy_text",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.Tags\`.",
      "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.tags",
      "name": "tags",
      "optional": true,
      "type": Object {
        "name": "typing.List[%]",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/core.CfnTag",
            "name": "aws_cdk.core.CfnTag",
          },
        ],
      },
    },
  ],
}
`;

exports[`python markdown snapshot 1`] = `
" CfnPublicRepositoryProps <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"[object Object].Initializer\\"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
\`\`\`

## \`repository_catalog_data\`<sup>Optional</sup> <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data\\"></a>

\`\`\`python
repository_catalog_data: typing.Any
\`\`\`

- *Type:* \`typing.Any\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

## \`repository_name\`<sup>Optional</sup> <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_name\\"></a>

\`\`\`python
repository_name: str
\`\`\`

- *Type:* \`str\`

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

## \`repository_policy_text\`<sup>Optional</sup> <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_policy_text\\"></a>

\`\`\`python
repository_policy_text: typing.Any
\`\`\`

- *Type:* \`typing.Any\`

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

## \`tags\`<sup>Optional</sup> <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.tags\\"></a>

\`\`\`python
tags: typing.List[CfnTag]
\`\`\`

- *Type:* typing.List[[\`aws_cdk.core.CfnTag\`](#aws_cdk.core.CfnTag)]

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`typescript json snapshot 1`] = `
Object {
  "docs": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "initializer": "\`\`\`typescript
import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }
\`\`\`
",
  "name": "CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.repositoryCatalogData",
      "name": "repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "any",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.repositoryName",
      "name": "repositoryName",
      "optional": true,
      "type": Object {
        "name": "string",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.repositoryPolicyText",
      "name": "repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "any",
      },
    },
    Object {
      "default": undefined,
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "\`AWS::ECR::PublicRepository.Tags\`.",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.tags",
      "name": "tags",
      "optional": true,
      "type": Object {
        "name": "%[]",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/core.CfnTag",
            "name": "@aws-cdk/core.CfnTag",
          },
        ],
      },
    },
  ],
}
`;

exports[`typescript markdown snapshot 1`] = `
" CfnPublicRepositoryProps <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"[object Object].Initializer\\"></a>

\`\`\`typescript
import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }
\`\`\`

## \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`typescript
public readonly repositoryCatalogData: any;
\`\`\`

- *Type:* \`any\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

## \`repositoryName\`<sup>Optional</sup> <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

\`\`\`typescript
public readonly repositoryName: string;
\`\`\`

- *Type:* \`string\`

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

## \`repositoryPolicyText\`<sup>Optional</sup> <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

\`\`\`typescript
public readonly repositoryPolicyText: any;
\`\`\`

- *Type:* \`any\`

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

## \`tags\`<sup>Optional</sup> <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\"></a>

\`\`\`typescript
public readonly tags: CfnTag[];
\`\`\`

- *Type:* [\`@aws-cdk/core.CfnTag\`](#@aws-cdk/core.CfnTag)[]

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;
